# kalshi-agent

./: .env.example  .gitignore  Kalshi_Agent_Build_Spec.md  LICENSE  Prediction_Markets_Kalshi_Literature_Review.docx  README.md  pyproject.toml
.claude/: launch.json
docs/: SESSION_HANDOFF.md
scripts/: run_agent.bat  run_backtest.py  run_dashboard.bat  run_poller.bat
src/kalshi_agent/: config.py  orchestrator.py
src/kalshi_agent/dashboard/: app.py  data.py
src/kalshi_agent/data/: auth.py  client.py  models.py  poller.py  ratelimit.py  store.py
src/kalshi_agent/execution/: adapter.py  paper.py
src/kalshi_agent/ledger/: audit.py  portfolio.py
src/kalshi_agent/risk/: fees.py  guardrails.py  sizing.py
src/kalshi_agent/strategy/: backtest.py  calibration.py  data_loader.py  decision.py  exit.py  horizon.py  signals.py
tests/: test_auth.py  test_backtest.py  test_calibration.py  test_client.py  test_config.py  test_dashboard_data.py  test_decision.py  test_econ.py  test_exit.py  test_fees.py  test_guardrails.py  test_horizon.py  test_orchestrator.py  test_paper_execution.py  test_poller.py  test_portfolio.py  test_sizing.py  test_store.py  test_strategy_data_loader.py  test_weather.py
